mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>CV</title>
 </head>
 <body>
-    
+    <h2>BALLO Claudia</h2>
+    <h2>Balloclaudiamathilde13@gmail.com</h2>
+    <h2>+229 97 11 12 21</h2>
 </body>
 </html>
