--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>CV</title>
 </head>
 <body>
-    
+    h2 style="line-height: 40px;"><u><b>I-DESCRIPTION</b></u></h2> 
+            <div class="Description-contenu">
+                <p style="line-height: 40px;">  Je m'appelle <b>,BALLO Claudia</b>, titulaire d'un <b>BAC D</b> avec une mention <b>Assez bien</b>, je suis étudiante
+                  à <b>ESGIS-Bénin</b> en (IRT) Informatique, Réseau et Télécommunications
+                  .Ainsi je suis actuellement en 2e Année dans la spécialité des Achitecture Logiciel (AL).
+                </p>
+            </div>
 </body>
 </html>
