mise en place de la section formation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>CV</title>
 </head>
 <body>
-    
+    <h2><u>II-Formations</u></h2>
+        <p style="line-height: 30px;">
+                Concernant ma formation, je suis titulaire d'un Bac D à l'issu de mon année académique au Collège LAURA VICUNA.
+        </p>
 </body>
 </html>
