mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>CV</title>
 </head>
 <body>
-    
+    <h2><u>IV-Compétences</u></h2>
+                <p style="line-height: 40px;">
+                    Entre autres, on peut énumerer:
+                    <ul style="line-height: 40px;"> La maitrise de quelques logiciels informatiques comme <b>Visual Studio Code, Excel, Adobe Premiere Pro ...</b></ul>
+                    <ul style="line-height: 40px;">Création d'un SGBD ;</ul>
+                    <ul style="line-height: 40px;">Conception de Site Web statiques</ul>
+                </p>
 </body>
 </html>
